apps/staging/bitwarden/deployment-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: default
spec:
  replicas: 1
