apps/staging/bitwarden/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bitwarden
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
  hostnames:
    - bitwarden.staging.myrobertson.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bitwarden
          port: 8080
